--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stylexjs/stylex": "^0.4.1",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
+    "react-animated-number": "^0.4.4",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
